fix: icon should behind th of table

--- a/core/src/checkbox/shared.module.css
+++ b/core/src/checkbox/shared.module.css
@@ -23,7 +23,7 @@
 .icon {
 	position: absolute;
 	/* wins the z-index of outline */
-	z-index: 2;
+	z-index: var(--z-icon);
 	/* icon is always 16 x 16 */
 	top: 2px;
 	left: 2px;
