--- a/core/src/global.css
+++ b/core/src/global.css
@@ -60,6 +60,10 @@
 	/* Shadow */
 	--shadow-1: 0px 1px 4px rgba(0, 0, 0, 0.1);
 	--shadow-2: 0px 1px 4px rgba(0, 0, 0, 0.1);
+
+	/* z-index, depend on each other */
+	--z-icon: 2;
+	--z-th: 3; /* th always > icon */
 }
 
 body {
